[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/objects.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 9.53674e-07

[node name="Bullet" type="Area2D"]
position = Vector2( 14, 0 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="BulletPivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="BulletPivot"]
rotation = 1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 570, 584, 16, 28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
